tooling/nargo_cli/tests/snapshots/execution_failure/regression_12469/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to calculate the remainder with overflow
  ┌─ src/main.nr:2:5
  │
2 │     a % b
  │     -----
  │

Error interpreting main function
